--- a/index.html
+++ b/index.html
@@ -1,19 +1,76 @@
 
-<!DOCTYPE html>
 <html>
 <head>
   <title>Property Lookup</title>
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
+  <style>
+    body {
+      font-family: sans-serif;
+      background: #e9f5e4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .lookup-box {
+      background: #11641e;
+      color: white;
+      border-radius: 10px;
+      padding: 20px;
+      width: 500px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    .lookup-box h2 {
+      margin-top: 0;
+      font-size: 18px;
+    }
+    .lookup-form {
+      display: flex;
+      margin-top: 10px;
+    }
+    .lookup-input {
+      flex: 1;
+      padding: 12px;
+      border: none;
+      border-radius: 8px 0 0 8px;
+      font-size: 16px;
+      color: #333;
+    }
+    .lookup-button {
+      background-color: #f4b400;
+      color: #000;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 0 8px 8px 0;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    .secure-text {
+      font-size: 12px;
+      text-align: center;
+      margin-top: 8px;
+      color: #cdeacd;
+    }
+    #result {
+      background: #fff;
+      color: #000;
+      margin-top: 20px;
+      padding: 15px;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
-  <h2>Lookup Property Info</h2>
-
-  <form onsubmit="getProperty(event)">
-    <input type="text" id="addressInput" placeholder="Enter Address" required />
-    <button type="submit">Search</button>
-  </form>
-
-  <div id="result" style="margin-top:20px;"></div>
+  <div class="lookup-box">
+    <h2>Get a quick and easy price:</h2>
+    <form class="lookup-form" onsubmit="getProperty(event)">
+      <input type="text" id="addressInput" class="lookup-input" placeholder="1234 Main Street..." required />
+      <button type="submit" class="lookup-button">See My Price →</button>
+    </form>
+    <div class="secure-text">🔒 Your information is secure.</div>
+    <div id="result"></div>
+  </div>
 
   <script>
     async function getProperty(event) {
@@ -22,7 +79,7 @@
       resultDiv.innerHTML = "Loading...";
 
       try {
-        const response = await fetch('properties.xlsx');
+        const response = await fetch('https://property-lookup-site.onrender.com/properties.xlsx');
         const arrayBuffer = await response.arrayBuffer();
         const workbook = XLSX.read(arrayBuffer, { type: 'array' });
         const sheet = workbook.Sheets[workbook.SheetNames[0]];
