--- a/index.html
+++ b/index.html
@@ -1,64 +1,96 @@
-
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Property Lookup</title>
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: sans-serif;
       background: #e9f5e4;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
       margin: 0;
+      padding: 20px;
     }
+
     .lookup-box {
       background: #11641e;
       color: white;
       border-radius: 10px;
       padding: 20px;
-      width: 500px;
+      max-width: 500px;
+      width: 100%;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
+
     .lookup-box h2 {
       margin-top: 0;
       font-size: 18px;
+      text-align: center;
     }
+
     .lookup-form {
       display: flex;
+      flex-wrap: wrap;
       margin-top: 10px;
     }
+
     .lookup-input {
-      flex: 1;
+      flex: 1 1 100%;
       padding: 12px;
       border: none;
-      border-radius: 8px 0 0 8px;
+      border-radius: 8px;
       font-size: 16px;
       color: #333;
+      margin-bottom: 10px;
     }
+
     .lookup-button {
       background-color: #f4b400;
       color: #000;
       padding: 12px 20px;
       border: none;
-      border-radius: 0 8px 8px 0;
+      border-radius: 8px;
       font-size: 16px;
       cursor: pointer;
+      width: 100%;
     }
+
     .secure-text {
       font-size: 12px;
       text-align: center;
       margin-top: 8px;
       color: #cdeacd;
     }
+
     #result {
       background: #fff;
       color: #000;
       margin-top: 20px;
       padding: 15px;
       border-radius: 8px;
+    }
+
+    @media (min-width: 500px) {
+      .lookup-form {
+        flex-wrap: nowrap;
+      }
+      .lookup-input {
+        flex: 1;
+        margin-bottom: 0;
+        border-radius: 8px 0 0 8px;
+      }
+      .lookup-button {
+        width: auto;
+        border-radius: 0 8px 8px 0;
+        margin-left: -1px;
+      }
     }
   </style>
 </head>
