--- a/index.html
+++ b/index.html
@@ -110,48 +110,35 @@
       const resultDiv = document.getElementById("result");
       resultDiv.innerHTML = "Loading...";
 
-      const addressInput = document.getElementById("addressInput").value.trim().toLowerCase();
+      try {
+        const response = await fetch('https://geo.lawn2ai.com/properties.xlsx');
+        const arrayBuffer = await response.arrayBuffer();
+        const workbook = XLSX.read(arrayBuffer, { type: 'array' });
+        const sheet = workbook.Sheets[workbook.SheetNames[0]];
+        const data = XLSX.utils.sheet_to_json(sheet);
 
-      const trySources = [
-        'https://geo.lawn2ai.com/properties.xlsx', // subdomain (if you host it here)
-        'https://property-lookup-site.onrender.com/properties.xlsx' // fallback
-      ];
+        const addressInput = document.getElementById("addressInput").value.trim().toLowerCase();
+        const match = data.find(row => row.Address?.toLowerCase().includes(addressInput));
 
-      for (const url of trySources) {
-        try {
-          console.log("Trying to fetch:", url);
-          const response = await fetch(url);
-          if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+        if (match) {
+          const basePrice = 40;
+          const rate = 0.005;
+          const total = basePrice + (rate * parseFloat(match["Lot Size"] || 0));
 
-          const arrayBuffer = await response.arrayBuffer();
-          const workbook = XLSX.read(arrayBuffer, { type: 'array' });
-          const sheet = workbook.Sheets[workbook.SheetNames[0]];
-          const data = XLSX.utils.sheet_to_json(sheet);
-
-          const match = data.find(row => row.Address?.toLowerCase().includes(addressInput));
-          if (match) {
-            const basePrice = 40;
-            const rate = 0.005;
-            const total = basePrice + (rate * parseFloat(match["Lot Size"] || 0));
-
-            resultDiv.innerHTML = `
-              <strong>Address:</strong> ${match.Address}<br>
-              <strong>Lot Size:</strong> ${match["Lot Size"]} sq ft<br>
-              <strong>Owner:</strong> ${match.Owner}<br>
-              <strong>Type:</strong> ${match["Property Type"]}<br>
-              <strong>Estimated Price:</strong> $${total.toFixed(2)}
-            `;
-          } else {
-            resultDiv.innerHTML = "No matching property found.";
-          }
-          return; // stop after successful fetch
-        } catch (error) {
-          console.warn("Fetch failed for", url, error);
-          // Try next source
+          resultDiv.innerHTML = `
+            <strong>Address:</strong> ${match.Address}<br>
+            <strong>Lot Size:</strong> ${match["Lot Size"]} sq ft<br>
+            <strong>Owner:</strong> ${match.Owner}<br>
+            <strong>Type:</strong> ${match["Property Type"]}<br>
+            <strong>Estimated Price:</strong> $${total.toFixed(2)}
+          `;
+        } else {
+          resultDiv.innerHTML = "No matching property found.";
         }
+      } catch (error) {
+        resultDiv.innerHTML = "Error loading property data.";
+        console.error(error);
       }
-
-      resultDiv.innerHTML = "Failed to load property data. Please try again later.";
     }
   </script>
 </body>
