--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <div class="lookup-box">
     <h2>Get a quick and easy price:</h2>
     <form class="lookup-form" onsubmit="getProperty(event)">
-      <input type="text" id="addressInput" class="lookup-input" placeholder="1234 Main Street..." required />
+      <input type="text" id="addressInput" class="lookup-input" placeholder="1234 Main Street..." required autocomplete="off" />
       <button type="submit" class="lookup-button">See My Price →</button>
     </form>
     <div class="secure-text">🔒 Your information is secure.</div>
@@ -105,6 +105,22 @@
   </div>
 
   <script>
+    function normalizeAddress(str) {
+      return (str || "")
+        .toLowerCase()
+        .replace(/,\s*\b(?:tampa|fl|usa)\b/gi, '')
+        .replace(/[^\w\s]/gi, '')
+        .replace(/\s+/g, ' ')
+        .trim();
+    }
+
+    function getSimilarity(a, b) {
+      const wordsA = new Set(a.split(' '));
+      const wordsB = new Set(b.split(' '));
+      const common = [...wordsA].filter(w => wordsB.has(w));
+      return common.length / Math.max(wordsA.size, wordsB.size);
+    }
+
     async function getProperty(event) {
       event.preventDefault();
       const resultDiv = document.getElementById("result");
@@ -117,19 +133,30 @@
         const sheet = workbook.Sheets[workbook.SheetNames[0]];
         const data = XLSX.utils.sheet_to_json(sheet);
 
-        const addressInput = document.getElementById("addressInput").value.trim().toLowerCase();
-        const match = data.find(row => row.Address?.toLowerCase().includes(addressInput));
+        const input = normalizeAddress(document.getElementById("addressInput").value);
+        let bestMatch = null;
+        let bestScore = 0;
 
-        if (match) {
+        for (const row of data) {
+          const excelAddress = normalizeAddress(row.Address);
+          const score = getSimilarity(input, excelAddress);
+
+          if (score > bestScore) {
+            bestScore = score;
+            bestMatch = row;
+          }
+        }
+
+        if (bestMatch && bestScore >= 0.6) {
           const basePrice = 40;
           const rate = 0.005;
-          const total = basePrice + (rate * parseFloat(match["Lot Size"] || 0));
+          const total = basePrice + (rate * parseFloat(bestMatch["Lot Size"] || 0));
 
           resultDiv.innerHTML = `
-            <strong>Address:</strong> ${match.Address}<br>
-            <strong>Lot Size:</strong> ${match["Lot Size"]} sq ft<br>
-            <strong>Owner:</strong> ${match.Owner}<br>
-            <strong>Type:</strong> ${match["Property Type"]}<br>
+            <strong>Address:</strong> ${bestMatch.Address}<br>
+            <strong>Lot Size:</strong> ${bestMatch["Lot Size"]} sq ft<br>
+            <strong>Owner:</strong> ${bestMatch.Owner}<br>
+            <strong>Type:</strong> ${bestMatch["Property Type"]}<br>
             <strong>Estimated Price:</strong> $${total.toFixed(2)}
           `;
         } else {
