--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
   </div>
 
   <script>
+    function extractHouseNumber(str) {
+      const match = str.trim().match(/^(\d+)/);
+      return match ? match[1] : null;
+    }
+
     async function getProperty(event) {
       event.preventDefault();
       const resultDiv = document.getElementById("result");
@@ -119,28 +124,35 @@
         const data = XLSX.utils.sheet_to_json(sheet);
 
         const userInput = document.getElementById("addressInput").value;
+        const inputHouse = extractHouseNumber(userInput);
 
-        // Fuzzy search with Fuse.js
         const fuse = new Fuse(data, {
           keys: ['Address'],
-          threshold: 0.4,        // lower is stricter
-          distance: 100,         // more tolerant to gaps
+          threshold: 0.4,
+          distance: 100,
           ignoreLocation: true,
           includeScore: true,
         });
 
         const results = fuse.search(userInput);
-        if (results.length > 0) {
-          const match = results[0].item;
+
+        const filtered = results.filter(r => {
+          const matchHouse = extractHouseNumber(r.item.Address);
+          return matchHouse === inputHouse;
+        });
+
+        const finalResult = filtered.length > 0 ? filtered[0].item : null;
+
+        if (finalResult) {
           const basePrice = 40;
           const rate = 0.005;
-          const total = basePrice + (rate * parseFloat(match["Lot Size"] || 0));
+          const total = basePrice + (rate * parseFloat(finalResult["Lot Size"] || 0));
 
           resultDiv.innerHTML = `
-            <strong>Address:</strong> ${match.Address}<br>
-            <strong>Lot Size:</strong> ${match["Lot Size"]} sq ft<br>
-            <strong>Owner:</strong> ${match.Owner}<br>
-            <strong>Type:</strong> ${match.Type}<br>
+            <strong>Address:</strong> ${finalResult.Address}<br>
+            <strong>Lot Size:</strong> ${finalResult["Lot Size"]} sq ft<br>
+            <strong>Owner:</strong> ${finalResult.Owner}<br>
+            <strong>Type:</strong> ${finalResult.Type}<br>
             <strong>Estimated Price:</strong> $${total.toFixed(2)}
           `;
         } else {
