--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
   </div>
 
   <script>
+    function extractHouseNumber(str) {
+      const match = str.trim().match(/^(\d+)/);
+      return match ? match[1] : null;
+    }
+
     async function getProperty(event) {
       event.preventDefault();
       const resultDiv = document.getElementById("result");
@@ -118,7 +123,8 @@
         const sheet = workbook.Sheets[workbook.SheetNames[0]];
         const data = XLSX.utils.sheet_to_json(sheet);
 
-        const userInput = document.getElementById("addressInput").value;
+        const userInput = document.getElementById("addressInput").value.trim();
+        const inputHouse = extractHouseNumber(userInput);
 
         const fuse = new Fuse(data, {
           keys: ['Address'],
@@ -129,26 +135,41 @@
         });
 
         const results = fuse.search(userInput);
-        if (results.length > 0) {
-          const match = results[0].item;
+
+        let finalResult = null;
+        for (const r of results) {
+          const house = extractHouseNumber(r.item.Address || "");
+          if (house === inputHouse) {
+            finalResult = r.item;
+            break;
+          }
+        }
+
+        if (!finalResult && results.length > 0) {
+          finalResult = results[0].item;
+        }
+
+        if (finalResult) {
           const basePrice = 40;
           const rate = 0.005;
-          const total = basePrice + (rate * parseFloat(match["Lot Size"] || 0));
-          const addressEncoded = encodeURIComponent(match.Address);
-          const priceFormatted = total.toFixed(2);
+          const total = basePrice + (rate * parseFloat(finalResult["Lot Size"] || 0));
+          const totalFormatted = total.toFixed(2);
+
+          const staticMapUrl = `https://maps.googleapis.com/maps/api/staticmap?center=${encodeURIComponent(finalResult.Address)}&zoom=17&size=400x200&maptype=satellite&markers=color:red%7C${encodeURIComponent(finalResult.Address)}&key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg`;
 
           resultDiv.innerHTML = `
-            <strong>Address:</strong> ${match.Address}<br>
-            <strong>Lot Size:</strong> ${match["Lot Size"]} sq ft<br>
-            <strong>Owner:</strong> ${match.Owner}<br>
-            <strong>Type:</strong> ${match.Type}<br>
-            <strong>Estimated Price:</strong> $${priceFormatted}<br><br>
+            <strong>Address:</strong> ${finalResult.Address}<br>
+            <strong>Lot Size:</strong> ${finalResult["Lot Size"]} sq ft<br>
+            <strong>Owner:</strong> ${finalResult.Owner}<br>
+            <strong>Type:</strong> ${finalResult.Type}<br>
+            <strong>Estimated Price:</strong> $${totalFormatted}<br><br>
 
-            <a href="https://your-booking-url.com?address=${addressEncoded}&price=${priceFormatted}" 
-               target="_blank" 
-               style="display:inline-block;background:#f4b400;color:#000;padding:10px 16px;border-radius:6px;text-decoration:none;font-weight:bold;">
-               Book This Service →
-            </a>
+            <img src="${staticMapUrl}" alt="Map of property" style="width: 100%; border-radius: 6px; margin-bottom: 15px;" />
+
+            <button onclick="window.location.href='https://tampalawnpro.com/demo-3394'" 
+                    style="background: #f4b400; color: #000; padding: 12px 20px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+              Book This Service →
+            </button>
           `;
         } else {
           resultDiv.innerHTML = "No matching property found.";
