--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Property Lookup</title>
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#11641e">
+  <link rel="apple-touch-icon" href="/icon-192.png">
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
   <style>
@@ -78,9 +82,7 @@
     }
 
     @media (min-width: 500px) {
-      .lookup-form {
-        flex-wrap: nowrap;
-      }
+      .lookup-form { flex-wrap: nowrap; }
       .lookup-input {
         flex: 1;
         margin-bottom: 0;
@@ -135,7 +137,6 @@
         });
 
         const results = fuse.search(userInput);
-
         let finalResult = null;
         for (const r of results) {
           const house = extractHouseNumber(r.item.Address || "");
@@ -163,9 +164,7 @@
             <strong>Owner:</strong> ${finalResult.Owner}<br>
             <strong>Type:</strong> ${finalResult.Type}<br>
             <strong>Estimated Price:</strong> $${totalFormatted}<br><br>
-
             <img src="${staticMapUrl}" alt="Map of property" style="width: 100%; border-radius: 6px; margin-bottom: 15px;" />
-
             <button onclick="window.location.href='https://tampalawnpro.com/demo-3394'" 
                     style="background: #f4b400; color: #000; padding: 12px 20px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
               Book This Service →
@@ -196,6 +195,13 @@
 
       autocomplete.setBounds(tampaBounds);
       autocomplete.setOptions({ strictBounds: false });
+    }
+
+    // PWA setup
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/service-worker.js')
+        .then(() => console.log('✅ Service Worker registered'))
+        .catch(err => console.error('❌ SW registration failed:', err));
     }
   </script>
 
