--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <strong>Type:</strong> ${finalResult.Type}<br>
             <strong>Estimated Price:</strong> $${totalFormatted}<br><br>
             <img src="${staticMapUrl}" alt="Map of property" style="width: 100%; border-radius: 6px; margin-bottom: 15px;" />
-            <button onclick="window.location.href='https://tampalawnpro.com/demo-3394'" 
+            <button onclick="window.open('https://tampalawnpro.com/demo-3394', '_blank')" 
                     style="background: #f4b400; color: #000; padding: 12px 20px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
               Book This Service →
             </button>
@@ -197,7 +197,7 @@
       autocomplete.setOptions({ strictBounds: false });
     }
 
-    // PWA setup
+    // PWA Service Worker
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/service-worker.js')
         .then(() => console.log('✅ Service Worker registered'))
