--- a/index.html
+++ b/index.html
@@ -1,88 +1,211 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Instant Quote</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Property Lookup</title>
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#343434">
+  <link rel="apple-touch-icon" href="/icon-192.png">
+  <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
   <style>
+    * { box-sizing: border-box; }
+
     body {
-      background-color: #f1f1f1; /* light grey */
       font-family: sans-serif;
+      background: #f1f1f1;
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
+      margin: 0;
+      padding: 20px;
     }
 
-    .quote-box {
-      background-color: #2b2b2b; /* jet black */
-      color: #ffffff;
-      padding: 24px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-      max-width: 480px;
+    .lookup-box {
+      background: #2b2b2b; /* jet black */
+      color: white;
+      border-radius: 10px;
+      padding: 20px;
+      max-width: 500px;
       width: 100%;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+
+    .lookup-box h2 {
+      margin-top: 0;
+      font-size: 18px;
       text-align: center;
     }
 
-    .quote-box h2 {
-      font-size: 1.25rem;
-      margin-bottom: 1rem;
-    }
-
-    .input-group {
+    .lookup-form {
       display: flex;
-      border-radius: 8px;
-      overflow: hidden;
-      margin-bottom: 12px;
+      flex-wrap: wrap;
+      margin-top: 10px;
     }
 
-    .input-group input {
-      flex: 1;
+    .lookup-input {
+      flex: 1 1 100%;
       padding: 12px;
       border: none;
-      font-size: 1rem;
-    }
-
-    .input-group button {
-      background-color: #f5a623; /* orange button */
-      color: #000;
-      border: none;
-      padding: 0 16px;
-      font-weight: bold;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-
-    .secure-note {
-      display: flex;
-      align-items: center;
-      font-size: 0.85rem;
-      color: #ccc;
-      margin-bottom: 1rem;
-    }
-
-    .secure-note::before {
-      content: '🔒';
-      margin-right: 6px;
-    }
-
-    .result-box {
-      background: #fff;
       border-radius: 8px;
-      height: 40px;
+      font-size: 16px;
+      color: #333;
+      margin-bottom: 10px;
+    }
+
+    .lookup-button {
+      background-color: #f4b400;
+      color: #000;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      width: 100%;
+    }
+
+    .secure-text {
+      font-size: 12px;
+      text-align: center;
+      margin-top: 8px;
+      color: #ccc;
+    }
+
+    #result {
+      background: #fff;
+      color: #000;
+      margin-top: 20px;
+      padding: 15px;
+      border-radius: 8px;
+    }
+
+    @media (min-width: 500px) {
+      .lookup-form { flex-wrap: nowrap; }
+      .lookup-input {
+        flex: 1;
+        margin-bottom: 0;
+        border-radius: 8px 0 0 8px;
+      }
+      .lookup-button {
+        width: auto;
+        border-radius: 0 8px 8px 0;
+        margin-left: -1px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="quote-box">
+  <div class="lookup-box">
     <h2>Instant Quote in Seconds</h2>
-    <div class="input-group">
-      <input type="text" placeholder="1234 Main Street..." />
-      <button>Show My Quote →</button>
-    </div>
-    <div class="secure-note">We keep your info safe and private.</div>
-    <div class="result-box"></div>
+    <form class="lookup-form" onsubmit="getProperty(event)">
+      <input type="text" id="addressInput" class="lookup-input" placeholder="1234 Main Street..." required autocomplete="off" />
+      <button type="submit" class="lookup-button">Show My Quote →</button>
+    </form>
+    <div class="secure-text">🔒 We keep your info safe and private.</div>
+    <div id="result"></div>
   </div>
+
+  <script>
+    function extractHouseNumber(str) {
+      const match = str.trim().match(/^(\d+)/);
+      return match ? match[1] : null;
+    }
+
+    async function getProperty(event) {
+      event.preventDefault();
+      const resultDiv = document.getElementById("result");
+      resultDiv.innerHTML = "Loading...";
+
+      try {
+        const response = await fetch('https://geo.lawn2ai.com/properties.xlsx');
+        const arrayBuffer = await response.arrayBuffer();
+        const workbook = XLSX.read(arrayBuffer, { type: 'array' });
+        const sheet = workbook.Sheets[workbook.SheetNames[0]];
+        const data = XLSX.utils.sheet_to_json(sheet);
+
+        const userInput = document.getElementById("addressInput").value.trim();
+        const inputHouse = extractHouseNumber(userInput);
+
+        const fuse = new Fuse(data, {
+          keys: ['Address'],
+          threshold: 0.4,
+          distance: 100,
+          ignoreLocation: true,
+          includeScore: true,
+        });
+
+        const results = fuse.search(userInput);
+        let finalResult = null;
+        for (const r of results) {
+          const house = extractHouseNumber(r.item.Address || "");
+          if (house === inputHouse) {
+            finalResult = r.item;
+            break;
+          }
+        }
+
+        if (!finalResult && results.length > 0) {
+          finalResult = results[0].item;
+        }
+
+        if (finalResult) {
+          const basePrice = 40;
+          const rate = 0.005;
+          const total = basePrice + (rate * parseFloat(finalResult["Lot Size"] || 0));
+          const totalFormatted = total.toFixed(2);
+
+          const staticMapUrl = `https://maps.googleapis.com/maps/api/staticmap?center=${encodeURIComponent(finalResult.Address)}&zoom=17&size=400x200&maptype=satellite&markers=color:red%7C${encodeURIComponent(finalResult.Address)}&key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg`;
+
+          resultDiv.innerHTML = `
+            <strong>Address:</strong> ${finalResult.Address}<br>
+            <strong>Lot Size:</strong> ${finalResult["Lot Size"]} sq ft<br>
+            <strong>Owner:</strong> ${finalResult.Owner}<br>
+            <strong>Type:</strong> ${finalResult.Type}<br>
+            <strong>Estimated Price:</strong> $${totalFormatted}<br><br>
+            <img src="${staticMapUrl}" alt="Map of property" style="width: 100%; border-radius: 6px; margin-bottom: 15px;" />
+            <button onclick="window.open('https://tampalawnpro.com/demo-3394', '_blank')" 
+                    style="background: #f4b400; color: #000; padding: 12px 20px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+              Book This Service →
+            </button>
+          `;
+        } else {
+          resultDiv.innerHTML = "No matching property found.";
+        }
+      } catch (error) {
+        resultDiv.innerHTML = "Error loading property data.";
+        console.error(error);
+      }
+    }
+
+    function initAutocomplete() {
+      const input = document.getElementById("addressInput");
+      const autocomplete = new google.maps.places.Autocomplete(input, {
+        types: ['address'],
+        componentRestrictions: { country: "us" }
+      });
+
+      const tampaBounds = {
+        north: 28.3,
+        south: 27.7,
+        east: -82.2,
+        west: -82.6
+      };
+
+      autocomplete.setBounds(tampaBounds);
+      autocomplete.setOptions({ strictBounds: false });
+    }
+
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/service-worker.js')
+        .then(() => console.log('✅ Service Worker registered'))
+        .catch(err => console.error('❌ SW registration failed:', err));
+    }
+  </script>
+
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg&libraries=places&callback=initAutocomplete">
+  </script>
 </body>
 </html>
