--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Property Lookup</title>
-  <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#343434">
+  <link rel="manifest" href="/manifest.json">
   <link rel="apple-touch-icon" href="/icon-192.png">
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
@@ -24,7 +24,7 @@
     }
 
     .lookup-box {
-      background: #2b2b2b; /* jet black */
+      background: #2b2b2b;
       color: white;
       border-radius: 10px;
       padding: 20px;
@@ -83,15 +83,10 @@
 
     @media (min-width: 500px) {
       .lookup-form { flex-wrap: nowrap; }
+      #step2-form { flex-direction: column; }
       .lookup-input {
-        flex: 1;
-        margin-bottom: 0;
-        border-radius: 8px 0 0 8px;
-      }
-      .lookup-button {
-        width: auto;
-        border-radius: 0 8px 8px 0;
-        margin-left: -1px;
+        margin-bottom: 10px;
+        border-radius: 8px;
       }
     }
   </style>
@@ -99,15 +94,55 @@
 <body>
   <div class="lookup-box">
     <h2>Instant Quote in Seconds</h2>
-    <form class="lookup-form" onsubmit="getProperty(event)">
+
+    <!-- Step 1: Address -->
+    <form id="step1-form" class="lookup-form" onsubmit="handleAddressSubmit(event)">
       <input type="text" id="addressInput" class="lookup-input" placeholder="1234 Main Street..." required autocomplete="off" />
+      <button type="submit" class="lookup-button">Next →</button>
+    </form>
+
+    <!-- Step 2: Contact Info -->
+    <form id="step2-form" class="lookup-form" onsubmit="getProperty(event)" style="display: none; flex-direction: column;">
+      <input type="text" id="fullName" class="lookup-input" placeholder="Full Name (optional)" />
+      <input type="email" id="email" class="lookup-input" placeholder="Email Address (optional)" />
+      <input type="tel" id="phone" class="lookup-input" placeholder="Phone Number (required)" required />
       <button type="submit" class="lookup-button">Show My Quote →</button>
     </form>
+
     <div class="secure-text">🔒 We keep your info safe and private.</div>
     <div id="result"></div>
   </div>
 
   <script>
+    function handleAddressSubmit(event) {
+      event.preventDefault();
+      const addressInput = document.getElementById("addressInput").value.trim();
+      if (!addressInput) return;
+
+      sessionStorage.setItem("selectedAddress", addressInput);
+      document.getElementById("step1-form").style.display = "none";
+      document.getElementById("step2-form").style.display = "flex";
+    }
+
+    async function sendEmail({ fullName, email, phone }) {
+      try {
+        const res = await fetch("https://formspree.io/f/xblylokk", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            fullName,
+            email,
+            phone,
+            message: `New Quote Lead\n\nName: ${fullName}\nEmail: ${email}\nPhone: ${phone}`
+          }),
+        });
+        if (!res.ok) throw new Error("Email send failed");
+        console.log("✅ Email sent to mstagg@digit2ai.com");
+      } catch (err) {
+        console.error("❌ Email error:", err);
+      }
+    }
+
     function extractHouseNumber(str) {
       const match = str.trim().match(/^(\d+)/);
       return match ? match[1] : null;
@@ -118,6 +153,12 @@
       const resultDiv = document.getElementById("result");
       resultDiv.innerHTML = "Loading...";
 
+      const fullName = document.getElementById("fullName").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const phone = document.getElementById("phone").value.trim();
+
+      await sendEmail({ fullName, email, phone });
+
       try {
         const response = await fetch('https://geo.lawn2ai.com/properties.xlsx');
         const arrayBuffer = await response.arrayBuffer();
@@ -125,7 +166,7 @@
         const sheet = workbook.Sheets[workbook.SheetNames[0]];
         const data = XLSX.utils.sheet_to_json(sheet);
 
-        const userInput = document.getElementById("addressInput").value.trim();
+        const userInput = sessionStorage.getItem("selectedAddress") || "";
         const inputHouse = extractHouseNumber(userInput);
 
         const fuse = new Fuse(data, {
