--- a/index.html
+++ b/index.html
@@ -41,18 +41,19 @@
 
     .lookup-form {
       display: flex;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
       margin-top: 10px;
+      gap: 0;
     }
 
     .lookup-input {
-      flex: 1 1 100%;
+      flex: 1;
       padding: 12px;
       border: none;
-      border-radius: 8px;
+      border-radius: 8px 0 0 8px;
       font-size: 16px;
       color: #333;
-      margin-bottom: 10px;
+      min-width: 0;
     }
 
     .lookup-button {
@@ -60,10 +61,10 @@
       color: #000;
       padding: 12px 20px;
       border: none;
-      border-radius: 8px;
+      border-radius: 0 8px 8px 0;
       font-size: 16px;
       cursor: pointer;
-      width: 100%;
+      white-space: nowrap;
     }
 
     .secure-text {
@@ -81,12 +82,16 @@
       border-radius: 8px;
     }
 
-    @media (min-width: 500px) {
-      .lookup-form { flex-wrap: nowrap; }
-      #step2-form { flex-direction: column; }
-      .lookup-input {
-        margin-bottom: 10px;
+    @media (max-width: 500px) {
+      .lookup-form {
+        flex-direction: column;
+      }
+
+      .lookup-input,
+      .lookup-button {
         border-radius: 8px;
+        margin-bottom: 10px;
+        width: 100%;
       }
     }
   </style>
@@ -102,7 +107,7 @@
     </form>
 
     <!-- Step 2: Contact Info -->
-    <form id="step2-form" class="lookup-form" onsubmit="getProperty(event)" style="display: none; flex-direction: column;">
+    <form id="step2-form" class="lookup-form" onsubmit="getProperty(event)" style="display: none; flex-direction: column; margin-top: 10px;">
       <input type="text" id="fullName" class="lookup-input" placeholder="Full Name (optional)" />
       <input type="email" id="email" class="lookup-input" placeholder="Email Address (optional)" />
       <input type="tel" id="phone" class="lookup-input" placeholder="Phone Number (required)" required />
