--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     async function getProperty(event) {
       event.preventDefault();
       const resultDiv = document.getElementById("result");
-      resultDiv.innerHTML = "Loading...";
+      resultDiv.innerHTML = "Initiating geolocation and real-time quote calculation. Please allow up to 30 seconds....";
 
       const fullName = document.getElementById("fullName").value.trim();
       const email = document.getElementById("email").value.trim();
