--- a/index.html
+++ b/index.html
@@ -80,24 +80,6 @@
       padding: 15px;
       border-radius: 8px;
     }
-
-    #loadingMessage {
-      display: none;
-      background: #fff;
-      color: #000;
-      font-size: 14px;
-      padding: 12px;
-      border-radius: 8px;
-      margin-top: 15px;
-    }
-
-    #geoError {
-      display: none;
-      color: red;
-      font-size: 13px;
-      margin-top: 10px;
-      text-align: center;
-    }
   </style>
 </head>
 <body>
@@ -118,15 +100,8 @@
       <button type="submit" class="lookup-button">Show My Quote →</button>
     </form>
 
-    <div class="secure-text">🔐 We keep your info safe and private.</div>
+    <div class="secure-text">🔒 We keep your info safe and private.</div>
     <div id="result"></div>
-    <div id="loadingMessage">
-      📍 Initiating geolocation and real-time quote calculation.<br>
-      Please allow up to <strong>30 seconds</strong>.
-    </div>
-    <div id="geoError">
-      ⚠️ Location access is required. Please enable it in your browser settings.
-    </div>
   </div>
 
   <script>
@@ -167,12 +142,7 @@
     async function getProperty(event) {
       event.preventDefault();
       const resultDiv = document.getElementById("result");
-      const loadingDiv = document.getElementById("loadingMessage");
-      const geoErrorDiv = document.getElementById("geoError");
-
-      loadingDiv.style.display = "block";
-      geoErrorDiv.style.display = "none";
-      resultDiv.innerHTML = "";
+      resultDiv.innerHTML = "Initiating geolocation and real-time quote calculation. Please allow up to 30 seconds....";
 
       const fullName = document.getElementById("fullName").value.trim();
       const email = document.getElementById("email").value.trim();
@@ -180,83 +150,65 @@
 
       await sendEmail({ fullName, email, phone });
 
-      if (!navigator.geolocation) {
-        loadingDiv.style.display = "none";
-        alert("Geolocation not supported by this device.");
-        return;
-      }
+      try {
+        const response = await fetch('https://geo.lawn2ai.com/properties.xlsx');
+        const arrayBuffer = await response.arrayBuffer();
+        const workbook = XLSX.read(arrayBuffer, { type: 'array' });
+        const sheet = workbook.Sheets[workbook.SheetNames[0]];
+        const data = XLSX.utils.sheet_to_json(sheet);
 
-      navigator.geolocation.getCurrentPosition(
-        async (position) => {
-          try {
-            const response = await fetch('https://geo.lawn2ai.com/properties.xlsx');
-            const arrayBuffer = await response.arrayBuffer();
-            const workbook = XLSX.read(arrayBuffer, { type: 'array' });
-            const sheet = workbook.Sheets[workbook.SheetNames[0]];
-            const data = XLSX.utils.sheet_to_json(sheet);
+        const userInput = sessionStorage.getItem("selectedAddress") || "";
+        const inputHouse = extractHouseNumber(userInput);
 
-            const userInput = sessionStorage.getItem("selectedAddress") || "";
-            const inputHouse = extractHouseNumber(userInput);
+        const fuse = new Fuse(data, {
+          keys: ['Address'],
+          threshold: 0.4,
+          distance: 100,
+          ignoreLocation: true,
+          includeScore: true,
+        });
 
-            const fuse = new Fuse(data, {
-              keys: ['Address'],
-              threshold: 0.4,
-              distance: 100,
-              ignoreLocation: true,
-              includeScore: true,
-            });
-
-            const results = fuse.search(userInput);
-            let finalResult = null;
-            for (const r of results) {
-              const house = extractHouseNumber(r.item.Address || "");
-              if (house === inputHouse) {
-                finalResult = r.item;
-                break;
-              }
-            }
-
-            if (!finalResult && results.length > 0) {
-              finalResult = results[0].item;
-            }
-
-            if (finalResult) {
-              const basePrice = 40;
-              const rate = 0.005;
-              const total = basePrice + (rate * parseFloat(finalResult["Lot Size"] || 0));
-              const totalFormatted = total.toFixed(2);
-
-              const staticMapUrl = `https://maps.googleapis.com/maps/api/staticmap?center=${encodeURIComponent(finalResult.Address)}&zoom=17&size=400x200&maptype=satellite&markers=color:red%7C${encodeURIComponent(finalResult.Address)}&key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg`;
-
-              resultDiv.innerHTML = `
-                <strong>Address:</strong> ${finalResult.Address}<br>
-                <strong>Lot Size:</strong> ${finalResult["Lot Size"]} sq ft<br>
-                <strong>Owner:</strong> ${finalResult.Owner}<br>
-                <strong>Type:</strong> ${finalResult.Type}<br>
-                <strong>Estimated Price:</strong> $${totalFormatted}<br><br>
-                <img src="${staticMapUrl}" alt="Map of property" style="width: 100%; border-radius: 6px; margin-bottom: 15px;" />
-                <button onclick="window.open('https://tampalawnpro.com/demo-3394', '_blank')" 
-                        style="background: #f4b400; color: #000; padding: 12px 20px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
-                  Book This Service →
-                </button>
-              `;
-            } else {
-              resultDiv.innerHTML = "No matching property found.";
-            }
-          } catch (error) {
-            resultDiv.innerHTML = "Error loading property data.";
-            console.error(error);
-          } finally {
-            loadingDiv.style.display = "none";
+        const results = fuse.search(userInput);
+        let finalResult = null;
+        for (const r of results) {
+          const house = extractHouseNumber(r.item.Address || "");
+          if (house === inputHouse) {
+            finalResult = r.item;
+            break;
           }
-        },
-        (error) => {
-          loadingDiv.style.display = "none";
-          geoErrorDiv.style.display = "block";
-          console.error(error);
-        },
-        { timeout: 20000 }
-      );
+        }
+
+        if (!finalResult && results.length > 0) {
+          finalResult = results[0].item;
+        }
+
+        if (finalResult) {
+          const basePrice = 40;
+          const rate = 0.005;
+          const total = basePrice + (rate * parseFloat(finalResult["Lot Size"] || 0));
+          const totalFormatted = total.toFixed(2);
+
+          const staticMapUrl = `https://maps.googleapis.com/maps/api/staticmap?center=${encodeURIComponent(finalResult.Address)}&zoom=17&size=400x200&maptype=satellite&markers=color:red%7C${encodeURIComponent(finalResult.Address)}&key=AIzaSyC3EJTm3D0afQzZebyLovtODu0DXGlQAPg`;
+
+          resultDiv.innerHTML = `
+            <strong>Address:</strong> ${finalResult.Address}<br>
+            <strong>Lot Size:</strong> ${finalResult["Lot Size"]} sq ft<br>
+            <strong>Owner:</strong> ${finalResult.Owner}<br>
+            <strong>Type:</strong> ${finalResult.Type}<br>
+            <strong>Estimated Price:</strong> $${totalFormatted}<br><br>
+            <img src="${staticMapUrl}" alt="Map of property" style="width: 100%; border-radius: 6px; margin-bottom: 15px;" />
+            <button onclick="window.open('https://tampalawnpro.com/demo-3394', '_blank')" 
+                    style="background: #f4b400; color: #000; padding: 12px 20px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+              Book This Service →
+            </button>
+          `;
+        } else {
+          resultDiv.innerHTML = "No matching property found.";
+        }
+      } catch (error) {
+        resultDiv.innerHTML = "Error loading property data.";
+        console.error(error);
+      }
     }
 
     function initAutocomplete() {
